examples/test/testpolicy13373.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13373
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key37: value43
      key36: value3
      key21: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value44
          key32: value22
      podSelector:
        matchLabels:
          key48: value9
          key39: value10
